feat(forge16/20): update API usage, add comments to config, and add %pokemon% placeholder for completed item